Fixed banner title on small sizes

--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -81,3 +81,18 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .banner-title {
+    font-size: 1.8em;
+  }
+  @keyframes animated-text {
+    from {
+      width: 0;
+    }
+
+    to {
+      width: 220px;
+    }
+  }
+}
